# chess-db

./: .clangd  .gitignore  .gitmodules  meson.build  meson_options.txt  readme.md  test.pgn
cygnus/: package-lock.json  package.json
pgn/: ambiguous.pgn  chessdoctor.pgn  lichess_easy.pgn  lichess_hard.pgn
src/: main.cc  meson.build
src/async/: generator.hh  task.hh  thread_pool.hh
src/chess/: bitboard.cc  bitboard.hh  bits.c  bits.h  main.cc  meson.build  movegen.c  movegen.cc  movegen.h  movegen.hh  notation.c  notation.cc  notation.h  notation.hh  pgn.cc  pgn.hh  position.c  position.cc  position.h  position.hh  state.h  test.c  text.c  text.h  uchess.h  util.h
src/core/: byteio.cc  byteio.hh  error.cc  error.hh  io.cc  io.hh  logger.cc  logger.hh  main.cc
src/db/: bitstream.cc  codec.hh  database.cc  database.hh  db.cc  db.hh  encoder.cc  encoder.hh  game.hh  huffman.hh  io.cc  io.hh  meson.build  mmap.c  mmap.cc  page.hh  pageindex.hh
src/db/codec/: codec.hh  pgn.hh
src/format/: common.hh  u16.hh
src/pgn/: game.cc  game.hh  meson.build  nags.hh  parser.cc  parser.hh  tree.hh
src/tests/: perft.cc  pgn.cc  san.cc  san2.cc
src/util/: bits.hh  bytehist.hh  bytesize.hh  iterator.hh  komihash.hh  logger.cc  logger.hh  misc.hh  source_location.hh  vector.hh  wyhash.hh
subprojects/: Catch2.wrap  rapidjson.wrap
